# diagnostic-vs-causal-probing

./: .gitignore  LICENSE  README.md  activate.sh  environment.yml  main.py  pyproject.toml
cache/: mlp_n1048576_dim4_epochs10_nentities100_seed42.pt
heq/: config.py  das.py  data.py  experiments.py  models.py  probing.py
report/: references.bib  report.aux  report.blg  report.docx  report.out  report.tex  report_short.docx  report_short.tex
